--- a/pacman/src/main/resources/assets/ui/Overlay.fxml
+++ b/pacman/src/main/resources/assets/ui/Overlay.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox prefHeight="620.0" prefWidth="510.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univ.pacman.ui.controller.OverlayController">
+<VBox prefHeight="620.0" prefWidth="510.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univ.pacman.controller.OverlayController">
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="30.0" style="-fx-background-color: transparent;">
          <children>
