Settings view to edit sound volume

--- a/pacman/src/main/resources/assets/ui/Pause.fxml
+++ b/pacman/src/main/resources/assets/ui/Pause.fxml
@@ -1,20 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" prefHeight="620.0" prefWidth="510.0" spacing="32.0" style="-fx-background-color: rgba(0, 0, 0, .7);" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univ.pacman.controller.PauseController">
+<VBox alignment="CENTER" maxHeight="620.0" maxWidth="510.0" prefHeight="620.0" prefWidth="510.0" spacing="16.0" style="-fx-background-color: rgba(0, 0, 0, .7);" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univ.pacman.controller.PauseController">
    <children>
+      <Separator orientation="VERTICAL" prefHeight="200.0" style="-fx-border-color: red;" visible="false" VBox.vgrow="ALWAYS" />
       <Label style="-fx-text-fill: white; -fx-font-family: 'Press Start 2P', cursive; -fx-font-size: 40px;" text="PAUSE">
          <font>
             <Font size="40.0" />
          </font>
       </Label>
-      <Button mnemonicParsing="false" onAction="#unpause" style="-fx-text-fill: white; -fx-background-color: rgba(200, 200, 200, .7); -fx-font-family: 'Press Start 2P', cursive; -fx-font-size: 14px;" text="Back to the game">
+      <Button mnemonicParsing="false" onAction="#openSettings" style="-fx-text-fill: white; -fx-background-color: rgba(200, 200, 200, .7); -fx-font-family: 'Press Start 2P', cursive; -fx-font-size: 14px;" text="SETTINGS">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Button mnemonicParsing="false" onAction="#stop" style="-fx-text-fill: white; -fx-background-color: rgba(200, 200, 200, .7); -fx-font-family: 'Press Start 2P', cursive; -fx-font-size: 14px;" text="MAIN MENU">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Separator orientation="VERTICAL" prefHeight="200.0" style="-fx-border-color: red;" visible="false" VBox.vgrow="ALWAYS" />
+      <Button mnemonicParsing="false" onAction="#unpause" style="-fx-text-fill: white; -fx-background-color: rgba(200, 200, 200, .7); -fx-font-family: 'Press Start 2P', cursive; -fx-font-size: 14px;" text="BACK TO THE GAME">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
    </children>
+   <padding>
+      <Insets bottom="64.0" left="64.0" right="64.0" top="64.0" />
+   </padding>
 </VBox>
