--- a/pacman/src/main/resources/assets/ui/Menu.fxml
+++ b/pacman/src/main/resources/assets/ui/Menu.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="510.0" spacing="20.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univ.pacman.controller.MenuController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="510.0" spacing="16.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univ.pacman.controller.MenuController">
     <ImageView fitHeight="65.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true">
         <VBox.margin>
             <Insets bottom="25.0" />
@@ -20,7 +20,16 @@
       </font>
       <cursor>
          <Cursor fx:constant="CROSSHAIR" />
-      </cursor></Button>
+      </cursor>
+   </Button>
+    <Button contentDisplay="TEXT_ONLY" mnemonicParsing="false" onAction="#settings" style="-fx-font-family: 'Press Start 2P', cursive; -fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 18px;" text="SETTINGS">
+        <font>
+            <Font size="18.0" />
+        </font>
+        <cursor>
+            <Cursor fx:constant="CROSSHAIR" />
+        </cursor>
+    </Button>
    <Button contentDisplay="TEXT_ONLY" layoutX="231.0" layoutY="404.0" mnemonicParsing="false" onAction="#quit" style="-fx-font-family: 'Press Start 2P', cursive; -fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 18px;" text="QUIT">
       <font>
          <Font size="18.0" />
