--- a/pacman/src/main/resources/assets/ui/Overlay.fxml
+++ b/pacman/src/main/resources/assets/ui/Overlay.fxml
@@ -26,5 +26,16 @@
             <Insets left="15.0" />
          </padding>
       </HBox>
+      <VBox fx:id="ready" alignment="CENTER" prefHeight="552.0" prefWidth="510.0">
+         <children>
+            <Label alignment="CENTER" contentDisplay="TOP" prefHeight="36.0" prefWidth="160.0" style="-fx-font-family: 'Press Start 2P', cursive; -fx-text-fill: White; -fx-font-size: 13px;" text="READY !">
+               <padding>
+                  <Insets top="25.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets top="13.0" />
+               </VBox.margin></Label>
+         </children>
+      </VBox>
    </children>
 </VBox>
