--- a/pacman/src/main/resources/assets/ui/Overlay.fxml
+++ b/pacman/src/main/resources/assets/ui/Overlay.fxml
@@ -2,10 +2,11 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox prefHeight="620.0" prefWidth="510.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univ.pacman.controller.OverlayController">
+<VBox prefHeight="620.0" prefWidth="510.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univ.pacman.controller.OverlayController">
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="30.0" style="-fx-background-color: transparent;">
          <children>
@@ -28,13 +29,16 @@
       </HBox>
       <VBox fx:id="ready" alignment="CENTER" prefHeight="552.0" prefWidth="510.0">
          <children>
-            <Label alignment="CENTER" contentDisplay="TOP" prefHeight="36.0" prefWidth="160.0" style="-fx-font-family: 'Press Start 2P', cursive; -fx-text-fill: White; -fx-font-size: 13px;" text="READY !">
+            <Label alignment="CENTER" contentDisplay="TOP" prefHeight="36.0" prefWidth="160.0" style="-fx-font-family: 'Press Start 2P', cursive; -fx-text-fill: White; -fx-font-size: 13px; -fx-text-fill: yellow;" styleClass="image-clignote" stylesheets="@blink.css" text="READY !" textFill="#fbff00">
                <padding>
                   <Insets top="25.0" />
                </padding>
                <VBox.margin>
                   <Insets top="13.0" />
-               </VBox.margin></Label>
+               </VBox.margin>
+               <effect>
+                  <Glow level="0.69" />
+               </effect></Label>
          </children>
       </VBox>
    </children>
