--- a/pacman/src/main/resources/assets/ui/Overlay.fxml
+++ b/pacman/src/main/resources/assets/ui/Overlay.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox prefHeight="620.0" prefWidth="510.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univ.pacman.controller.OverlayController">
+<VBox prefHeight="620.0" prefWidth="510.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univ.pacman.controller.OverlayController">
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="30.0" style="-fx-background-color: transparent;">
          <children>
@@ -24,15 +24,12 @@
             </HBox>
          </children>
          <padding>
-            <Insets left="15.0" />
+            <Insets left="15.0" top="15.0" />
          </padding>
       </HBox>
       <VBox fx:id="ready" alignment="CENTER" prefHeight="552.0" prefWidth="510.0">
          <children>
             <Label alignment="CENTER" contentDisplay="TOP" prefHeight="36.0" prefWidth="160.0" style="-fx-font-family: 'Press Start 2P', cursive; -fx-font-size: 13px; -fx-text-fill: yellow;" text="READY !" textFill="#fbff00">
-               <padding>
-                  <Insets top="25.0" />
-               </padding>
                <VBox.margin>
                   <Insets top="13.0" />
                </VBox.margin>
@@ -40,6 +37,17 @@
                   <Glow level="0.69" />
                </effect></Label>
          </children>
+         <padding>
+            <Insets top="75.0" />
+         </padding>
       </VBox>
+      <HBox fx:id="fruits" alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="8.0">
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+         <padding>
+            <Insets right="100.0" />
+         </padding>
+      </HBox>
    </children>
 </VBox>
